<resources>
    <string name="app_name">DownloadDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="download_fragment">Download Fragment</string>
    <string name="no_data">NO DATA</string>
    <string name="download">DOWNLOAD</string>
    <string name="please_wait">Please wait</string>
    <string name="error_http">ERROR HTTP CONNECTION</string>
    <string name="go_to_player">Go To Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_fragment">Player Fragment</string>
    <string name="go_to_download">Go to Download</string>
    <string name="play">Play</string>
    <string name="go_to_pdf">Go to PDF</string>
    <string name="pdf_fragment">PDF fragment</string>
    <string name="read_pdf">Read PDF</string>

</resources>